# trading-bot-system

./: .env  .gitignore  AUTH_PAGES_REQUIREMENTS.md  BRD.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  DOCS_INDEX.md  DOCUMENTATION_CLEANUP_REPORT.md  DRAFT_STRATEGY_SPEC.md  FE_INTEGRATION_PLAN.md  FE_INTEGRATION_STATUS.md  GITHUB_SETUP.md  MONOREPO_STRUCTURE.md  NEXT_PHASE_PLAN.md  PHASE2_TASK1_COMPLETE.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  benchmark_backtest.py  compare_indicators.py  create_defense_strategy.py  debug_cors.py  debug_discrepancy.py  fetched_strategy.py  fix_strategy_code.py  main.py  main_window.py  martingale_fixed_sl_base.py  martingale_mtf_fixed_sl.py  mtf_strategy.py  run-all.sh  save_1h_strategy.py  settings_dialog.py  simulate_engine_logic.py  simulate_results.py  simulate_signals.py  simulate_signals_v2.py  simulate_signals_v3.py  simulate_state_bug.py  (+4 more)
backend/: .coverage  .env  .env.example  README.md  alembic.ini  check_failed_backtest.py  curls_test.py  debug_api.py  debug_fees.py  debug_leverage.py  debug_orm.py  debug_pnl.py  debug_save_perf.py  debug_trades.py  fetch_code.py  fix_db_constraint.py  fix_db_status_constraint.py  fixed_strategy.py  pyproject.toml  requirements.txt  run.sh  test_stream_logic.py  test_ws.py  update_mtf.py  update_strategy_db.py  verify.sh  verify_fees.py
backend/config/: logging.yml  settings.yml  trading-config.yml
backend/docs/: API_REFERENCE.md  ERD.md  IMPLEMENTATION_STATUS.md  JOBS_IMPLEMENTATION.md  MIGRATION_GUIDE.md  REDIS_IMPLEMENTATION.md  WEBSOCKET_IMPLEMENTATION.md  architecture.md  coding-rules.md  ddd-overview.md
backend/examples/: performance_examples.py
backend/migrations/: env.py
backend/scripts/: fetch_strategy_code.py  format.sh  init_db.py  insert_mtf_strategy.py  lint.sh  load_test.py  performance_test.py  production_readiness.py  run_dev.sh  seed_exchanges.py  test_db.sh
(+454 files in other folders)
